$Id: NEWS,v 1.33 2000-02-28 10:42:00 macgyver Exp $

1.2.0 - Released: ???
---------------------
- Fixed a bug in mod_ls that could cause a crash.
- Fixed a minor bug related to group permissions.
- Fixed a bug in calculating file system size when using statvfs.
- Fixed a bug when a 'TYPE L' directive is passed improperly.
- Fixed Umask directive handling in directories.
- Changed bandwidth throttling to use select() instead of usleep() to work
  better across platforms.
- Updated mod_ldap to 2.5.2.
- Environment is now preserved before trying anything fancy with set_proc_title
- Warn a user if an invalid class is specified in ExtendedLog
- Logging of transfer times is more precise now
- mod_quota now comes with ProFTPD in the contrib directory

1.2.0pre10 - Released: 1/17/00
------------------------------
- sendfile() handles errors and non-optimal conditions The Right Way(tm).

- install_group works right in warped cases of having more than one GID 0
  group defined.  No, don't ask. :)

- sendfile() doesn't log spurious messages unless it's in debug mode now.

- A meaningful error is now generated with bad group files.

- Complex group permissions work correctly now, where they did not in a
  rare case.

- Updated included version of mod_ldap.

- Bandwidth and sendfile() use are now mutually exclusive.

- Corrected minor log issues.

- Fixed various compilation issues on various platforms (isn't this vague :)).

- More informative error messages.

- Minor semi-Y2K issue in mod_readme fixed (don't ask...look at the code :)).

- Corrected error messages on most commands in cases where an invalid number
  of arguments are specified.

- An error message is now generated when ~ expansion is meaningless.

- Invalid host entries don't show up as (null) anymore.

1.2.0pre9 - Released: 10/27/99
------------------------------
- New support for BSD sendfile() semantics.

- sendfile() deprecates politely on Linux 2.0.x.
