@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.33 2000-02-28 10:42:00 macgyver Exp $
+$Id: NEWS,v 1.34 2000-02-28 10:50:33 macgyver Exp $
 
 1.2.0 - Released: ???
 ---------------------
@@ -14,6 +14,7 @@ $Id: NEWS,v 1.33 2000-02-28 10:42:00 macgyver Exp $
 - Warn a user if an invalid class is specified in ExtendedLog
 - Logging of transfer times is more precise now
 - mod_quota now comes with ProFTPD in the contrib directory
+- FreeBSD 4.0 support
 
 1.2.0pre10 - Released: 1/17/00
 ------------------------------
